# bbbi2c

./: BBoneBlackBMP085.cpp  BBoneBlackBMP085.hpp  BBoneBlackMC5883L.cpp  BBoneBlackMC5883L.hpp  CMakeLists.txt  CMakeLists.txt.autosave  CPBBoneBlackI2C.cpp  CPBBoneBlackI2C.hpp  CPDebugMessage.cpp  CPDebugMessage.hpp  README.md  bbbi2c.files  bbbi2c.pro  main.cpp
BBoneBlackBMP085/: BBoneBlackBMP085.cpp  CMakeLists.txt
BBoneBlackI2C/: CMakeLists.txt  CPBBoneBlackI2C.cpp  CPBBoneBlackI2C.hpp
BBoneBlackMC5883L/: BBoneBlackMC5883L.cpp  BBoneBlackMC5883L.hpp  CMakeLists.txt
